chore: update HTML meta tags, fix PostCSS config formatting, and enhance Tailwind CSS configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         ],
         "module": "ESNext",
         "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         /* Bundler mode */
