--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
         "lint": "tsc --noEmit"
     },
     "dependencies": {
+        "@emailjs/browser": "^4.4.1",
+        "framer-motion": "^10.16.4",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "framer-motion": "^10.16.4"
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.37",
         "@types/react-dom": "^18.2.15",
         "@vitejs/plugin-react": "^4.1.1",
-        "typescript": "^5.2.2",
-        "vite": "^5.0.0",
-        "tailwindcss": "^3.3.5",
+        "autoprefixer": "^10.4.16",
         "postcss": "^8.4.31",
-        "autoprefixer": "^10.4.16"
+        "tailwindcss": "^3.3.5",
+        "typescript": "^5.2.2",
+        "vite": "^5.0.0"
     }
 }
